--- a/Gallery.html
+++ b/Gallery.html
@@ -11,7 +11,7 @@ body {
 </head>
 <link rel="stylesheet" href="touchgallery.css" />
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 <script type="text/javascript" src="jquery.touchSwipe.min.js"></script>
 
 <script src="touchgallery.js">
